[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "visualizer-3d"
version = "0.3.1"
authors = [
  { name="Jonas Kneifl", email="jonas.kneifl@itm.uni-stuttgart.com" },
]
description = "Tool for three-dimensional animations of geometries like FE meshes"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyOpenGL>=3.1.6",
#    "PyOpenGL-accelerate>=3.1.6",
    "PyQt6>=6.3.0",
    "pyqtgraph>=0.12.3",
    "opencv-python",
    "matplotlib",
    "Pillow",
    "numpy",
]
keywords = [
    "visualiztion",
    "mesh",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools]

[project.urls]
Homepage = "https://github.com/jkneifl/visualizer"
Issues = "https://github.com/jkneifl/visualizer/issues"
